--- a/app/src/main/res/menu/start.xml
+++ b/app/src/main/res/menu/start.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_chat"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Config ChatBot"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_log"
+        android:orderInCategory="100"
+        android:title="Log Out"
         app:showAsAction="never" />
 </menu>
