--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -19,14 +19,13 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_marginTop="70dp"
-        android:layout_width="183dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:textColor="#505050"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.171"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline_2" />
 
@@ -154,12 +153,10 @@
         android:layout_marginStart="110dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="110dp"
-        android:backgroundTint="#fec202"
+        android:backgroundTint="#17756A"
         android:clickable="true"
         android:elevation="0dp"
         android:text="Signup"
-
-        android:textColor="#4e4637"
         android:textSize="18dp"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
