--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -78,7 +78,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/SCHOLAR"
+                    android:id="@+id/dept"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFeatureSettings="pnum, lnum"
