--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -169,6 +169,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
             android:text="Edit Profile" />
         <Button
             android:id="@+id/buttonLogOut"
@@ -176,6 +178,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
             android:text="Log Out" />
 
 
