Add:Send message

--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp">
+        >
         <TextView
             android:id="@+id/ticketID"
             android:layout_width="match_parent"
@@ -144,12 +144,6 @@
     android:id="@+id/feedbackLayout"
     android:visibility="gone"
     android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#787878" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -194,6 +188,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:enabled="false"
             android:text="Mark as in-progress" />
         <Button
             android:id="@+id/button4"
@@ -201,6 +196,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:enabled="false"
             android:text="Mark as resolved" />
         <Button
             android:id="@+id/button5"
@@ -208,6 +204,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:enabled="false"
             android:text="Report To Higher Authority" />
 
 
